--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -110,3 +110,12 @@ h2 {
 .hamburger.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
 }
+
+.hp-background-img {
+  height: 100%;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
