--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -63,7 +63,7 @@ h2 {
   list-style: none;
   top: -110%;
   left: 0;
-  align-items: center;
+  align-items: flex-end;
   padding: 10px 20px 20px 0;
   width: 100%;
   height: auto;
@@ -80,6 +80,7 @@ h2 {
 }
 .nav-item {
   margin: 7px 0;
+  width: 270px;
 }
 .nav-menu a {
   color: #DEFFFC;
@@ -109,4 +110,13 @@ h2 {
 }
 .hamburger.active .bar:nth-child(3) {
   transform: translateY(-8px) rotate(-45deg);
+}
+
+.hp-background-img {
+  height: 100%;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
 }
